synapse/deployment-matrix.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: matrix
  name: matrix
  labels:
    app: matrix
    tier: backend
    app.kubernetes.io/name: synapse
    app.kubernetes.io/instance: matrix
    app.kubernetes.io/managed-by: argo-cd
    app.kubernetes.io/part-of: matrix
    app.kubernetes.io/component: synapse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: matrix
      tier: backend
  template:
    metadata:
      labels:
        app: matrix
        tier: backend
    spec:
      priorityClassName: homelab-standard
      automountServiceAccountToken: false
      volumes:
        - name: matrix-lh
          persistentVolumeClaim:
            claimName: matrix-lh-v2
        - name: synapse-config
          secret:
            secretName: config-synapse
            items:
              - key: config.yaml
                path: config.yaml
        - name: tmp
          emptyDir: {}
      containers:
        - name: synapse
          image: harbor.andreybondarenko.com/dockerhub/matrixdotorg/synapse:v1.162.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 991
            runAsGroup: 991
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 6167
              name: federation
            - containerPort: 8008
              name: metrics
          startupProbe:
            tcpSocket:
              port: federation
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: federation
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: federation
            periodSeconds: 30
            timeoutSeconds: 1
            failureThreshold: 3
          volumeMounts:
            - name: matrix-lh
              mountPath: /data
            - name: synapse-config
              mountPath: /data/config.yaml
              subPath: config.yaml
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: "10m"
              memory: "208Mi"
            limits:
              memory: "288Mi"
