synapse/deployment-nginx-matrix.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: matrix
  name: nginx-matrix
  labels:
    tier: matrix
    app: matrix
    app.kubernetes.io/name: matrix
    app.kubernetes.io/instance: matrix
    app.kubernetes.io/managed-by: argoCD
  annotations:
    configmap.reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix
      tier: matrix
  template:
    metadata:
      labels:
        app: matrix
        tier: matrix
    spec:
      priorityClassName: homelab-standard
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 101
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: config-matrix
          configMap:
            name: config-matrix
            items:
              - key: config
                path: site.conf
        - name: cache
          emptyDir:
            sizeLimit: 500Mi
        - name: run
          emptyDir:
            sizeLimit: 1Mi
      containers:
        - name: matrix-nginx
          image: harbor.andreybondarenko.com/dockerhub/nginx:1.31.6
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 8080
            periodSeconds: 30
            timeoutSeconds: 1
            failureThreshold: 3
          volumeMounts:
            - name: config-matrix
              mountPath: /etc/nginx/conf.d
            - name: cache
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /var/run
          resources:
            requests:
              cpu: "10m"
              memory: "64Mi"
            limits:
              memory: "128Mi"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            seccompProfile:
              type: RuntimeDefault
