synapse/matrix-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: matrix
  name: matrix
  labels:
    tier: backend
spec:
  selector:
    app: matrix
    tier: backend
  ports:
    - port: 8448
      targetPort: 6167
      protocol: TCP
      name: federation
---
apiVersion: v1
kind: Service
metadata:
  namespace: matrix
  name: metrics
  labels:
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: matrix
    tier: backend
  ports:
    - port: 8008
      targetPort: 8008
      protocol: TCP
      name: metrics
