synapse/service-matrix.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: matrix
  name: matrix
  labels:
    tier: backend
spec:
  selector:
    app: matrix
    tier: backend
  ports:
    - port: 8448
      targetPort: 6167
      protocol: TCP
      name: federation
