synapse/service-nginx-matrix.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: matrix
  name: nginx-matrix
  labels:
    tier: matrix
spec:
  selector:
    app: matrix
    tier: matrix
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
