synapse/network-policy-matrix-synapse-allow-smtp-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-synapse-allow-smtp-egress
  namespace: matrix
spec:
  podSelector:
    matchLabels:
      app: matrix
      tier: backend
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 25
