synapse/network-policy-matrix-synapse-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: matrix-synapse-default-deny
  namespace: matrix
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
